# wordle

./: Cargo.toml  README.md
src/: main.rs  sample_dictionary.txt
